--- a/.github/workflows/qiniu.yml
+++ b/.github/workflows/qiniu.yml
@@ -16,7 +16,7 @@ jobs:
         region: cn-south-1
         bucket: static
         exclude: .cache,test
-        dist: public
+        dist: public1
       env:
         UPTOC_UPLOADER_AK: ${{ secrets.AK }}
         UPTOC_UPLOADER_SK: ${{ secrets.SK }}
