--- a/.github/workflows/qiniu.yml
+++ b/.github/workflows/qiniu.yml
@@ -6,8 +6,12 @@ jobs:
     name: "上传到七牛云任务"
     runs-on: ubuntu-latest
     steps:
+    
     - name: 检索文件 # checkout
       uses: actions/checkout@v2
+
+    - name: 先清空原有文件
+      run: rm -rf web/*
 
     - name: 执行上传
       uses: saltbo/uptoc@master
@@ -16,7 +20,7 @@ jobs:
         region: cn-south-1
         bucket: static
         exclude: .cache,test
-        dist: public1
+        dist: web
       env:
         UPTOC_UPLOADER_AK: ${{ secrets.AK }}
         UPTOC_UPLOADER_SK: ${{ secrets.SK }}
