--- a/.github/workflows/oss.yml
+++ b/.github/workflows/oss.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: 检索文件 # checkout
+    - name: 检索文件
       uses: actions/checkout@v2
 
     - name: 展示当前目录
@@ -15,10 +15,9 @@ jobs:
 
     - name: 执行上传
       uses: fangbinwei/aliyun-oss-website-action@v1
-       with:
-          accessKeyId: ${{ secrets.AK }}
-          accessKeySecret: ${{ secrets.SK }}
-          bucket: chongfei
-          # e.g. "oss-cn-shanghai.aliyuncs.com"
-          endpoint: oss-cn-hongkong.aliyuncs.com
-          folder: web
+      with:
+        accessKeyId: ${{ secrets.AAK }}
+        accessKeySecret: ${{ secrets.ASK }}
+        bucket: chongfei
+        endpoint: oss-cn-hongkong.aliyuncs.com
+        folder: web
