--- a/.github/workflows/qiniu.yml
+++ b/.github/workflows/qiniu.yml
@@ -6,12 +6,10 @@ jobs:
     name: "上传到七牛云任务"
     runs-on: ubuntu-latest
     steps:
-    
     - name: 检索文件 # checkout
       uses: actions/checkout@v2
-
     - name: 执行上传
-      uses: luochongfei/up2qn
+      uses: luochongfei/up2qn@master
       with:
         bucket: qiniu
         access_key: ${{ secrets.AK }}
