--- a/.github/workflows/qiniu.yml
+++ b/.github/workflows/qiniu.yml
@@ -4,12 +4,12 @@ on: push
 jobs:
   job1:
     name: "上传到七牛云任务"
-    runs-on: ubuntu-latest
+    runs-on: Ubuntu-20.04
     steps:
     - name: 检索文件 # checkout
       uses: actions/checkout@v2
     - name: 执行上传
-      uses: luochongfei/up2qn@master
+      uses: luochongfei/up2qn
       with:
         bucket: qiniu
         access_key: ${{ secrets.AK }}
