--- a/.github/workflows/qiniu.yml
+++ b/.github/workflows/qiniu.yml
@@ -10,7 +10,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: 执行上传
-      uses: luochongfei/up2qn
+      uses: luochongfei/up2qn@master
       with:
         bucket: static
         access_key: ${{ secrets.AK }}
