--- a/.github/workflows/qiniu.yml
+++ b/.github/workflows/qiniu.yml
@@ -12,8 +12,8 @@ jobs:
     - name: 执行上传
       uses: luochongfei/up2qn@master
       with:
-        bucket: 'static'
-        access_key: 'TmL4q74drl4FTezf5RhBnXaHFLkwMh98JvTl1ZCz'
-        secret_key: 'B_LuBetoZYecVqVhUXwObkYlfA0UvdtoUqEk-Spj'
-        local_dir: 'web'
-        local_exclude_dir: 'node_modules'
+        bucket: static
+        access_key: ${{ secrets.AK }}
+        secret_key: ${{ secrets.SK }}
+        local_dir: web
+        local_exclude_dir: node_modules
