--- a/.github/workflows/qiniu.yml
+++ b/.github/workflows/qiniu.yml
@@ -6,7 +6,7 @@ jobs:
     name: "上传到七牛云任务"
     runs-on: Ubuntu-20.04
     steps:
-    - name: 检索文件 # checkout
+    - name: 检索文件
       uses: actions/checkout@v2
 
     - name: 执行上传
@@ -17,5 +17,5 @@ jobs:
         access_key: ${{ secrets.AK }}
         secret_key: ${{ secrets.SK }}
         local_dir: web
-        local_exclude_dir: node_modules
+        local_exclude: '**/*.map,**/node_modules/**'
         target_dir: /
